checkSchemas and refactoring
