# src/routes.ts
@@ -1,13 +1,21 @@
 import { Router } from "express";
+import { Request, Response } from "express";
+import { param, validationResult, checkSchema } from "express-validator";
+
+import { isValidCnpj } from "./validators/cnpjValidator";
+import {
+  postAddressSchema,
+  postClientSchema,
+  updateAddressSchema,
+  updateClientSchema,
+} from "./validators/checkSchemas";
+
 import { AddressRepository } from "./data/repositories/addressRepository";
 import { ClientRepository } from "./data/repositories/ClientRepository";
-import { param, body, validationResult } from "express-validator";
-import { isValidCnpj } from "./controllers/cnpjValidator";
-import { isValidCep } from "./controllers/cepValidator";
 
 export const router = Router();
 
-router.get("/clients", async (req, res) => {
+router.get("/clients", async (req: Request, res: Response) => {
   // #swagger.tags = ['Clients']
   // #swagger.description = 'Endpoint to get all Clients.'
   const clientRep = new ClientRepository();
@@ -22,7 +30,7 @@ router.get("/clients", async (req, res) => {
 router.get(
   "/clients/:cnpj",
   param("cnpj").custom(isValidCnpj),
-  async (req, res) => {
+  async (req: Request, res: Response) => {
     // #swagger.tags = ['Clients']
     // #swagger.description = 'Endpoint to a Clients by cnpj.'
     const cnpj = req.params.cnpj;
@@ -42,10 +50,8 @@ router.get(
 
 router.post(
   "/clients",
-  body("contact").trim().isEmail(),
-  body("telephone").trim().isMobilePhone("pt-BR"),
-  body("cnpj").custom(isValidCnpj),
-  (req, res) => {
+  checkSchema(postClientSchema),
+  (req: Request, res: Response) => {
     // #swagger.tags = ['Clients']
     // #swagger.description = 'Endpoint to register one Client.'
     const errors = validationResult(req);
@@ -60,11 +66,8 @@ router.post(
 
 router.patch(
   "/clients/:cnpj",
-  body("contact").optional().trim().isEmail(),
-  body("telephone").optional().trim().isMobilePhone("pt-BR"),
-  body("cnpj").optional().trim().custom(isValidCnpj),
-  param("cnpj").custom(isValidCnpj),
-  async (req, res) => {
+  checkSchema(updateClientSchema),
+  async (req: Request, res: Response) => {
     // #swagger.tags = ['Clients']
     // #swagger.description = 'Endpoint to update any data of one Client.'
     const clientRep = new ClientRepository();
@@ -86,7 +89,7 @@ router.patch(
 router.delete(
   "/clients/:cnpj",
   param("cnpj").trim().custom(isValidCnpj),
-  async (req, res) => {
+  async (req: Request, res: Response) => {
     // #swagger.tags = ['Clients']
     // #swagger.description = 'Endpoint to delete one Client by cnpj.'
     const errors = validationResult(req);
@@ -107,14 +110,8 @@ router.delete(
 
 router.post(
   "/clients/:cnpj/address",
-  body("street").trim().exists(),
-  body("number").trim().exists(),
-  body("district").trim().exists(),
-  body("city").trim().exists(),
-  body("state").trim().exists(),
-  body("cep").trim().exists().custom(isValidCep),
-  param("cnpj").trim().custom(isValidCnpj),
-  (req, res) => {
+  checkSchema(postAddressSchema),
+  (req: Request, res: Response) => {
     // #swagger.tags = ['Addresses']
     // #swagger.description = 'Endpoint to register one  Address linked to one client by cnpj.'
     const errors = validationResult(req);
@@ -122,22 +119,15 @@ router.post(
       return res.status(400).json({ errors: errors.array() });
     }
     const addressRep = new AddressRepository();
-    const cnpj = req.params.cnpj;
-    addressRep.insert(req.body, cnpj);
+    addressRep.insert(req.body, req.params.clientId);
     res.status(201).send(`created client.`);
   }
 );
 
 router.patch(
   "/clients/address/:id",
-  body("street").optional().trim(),
-  body("number").optional().trim(),
-  body("district").optional().trim(),
-  body("city").optional().trim(),
-  body("state").optional().trim(),
-  body("cep").optional().trim().custom(isValidCep),
-  param("id").isUUID(),
-  async (req, res) => {
+  checkSchema(updateAddressSchema),
+  async (req: Request, res: Response) => {
     // #swagger.tags = ['Addresses']
     // #swagger.description = 'Endpoint to update any data of one Address by id.'
     const errors = validationResult(req);
@@ -155,25 +145,29 @@ router.patch(
   }
 );
 
-router.delete("/clients/address/:id", param("id").isUUID(), (req, res) => {
-  // #swagger.tags = ['Addresses']
-  // #swagger.description = 'Endpoint to delete one Address by id.'
-  const errors = validationResult(req);
-  if (!errors.isEmpty()) {
-    return res.status(400).json({ errors: errors.array() });
+router.delete(
+  "/clients/address/:id",
+  param("id").isUUID(),
+  (req: Request, res: Response) => {
+    // #swagger.tags = ['Addresses']
+    // #swagger.description = 'Endpoint to delete one Address by id.'
+    const errors = validationResult(req);
+    if (!errors.isEmpty()) {
+      return res.status(400).json({ errors: errors.array() });
+    }
+    try {
+      const id = req.params.id;
+      const addressRep = new AddressRepository();
+      addressRep.delete(id);
+      res.status(200).send("deleted Address.");
+    } catch (err) {
+      return res.status(404).json("Address not found.");
+    }
   }
-  try {
-    const id = req.params.id;
-    const addressRep = new AddressRepository();
-    addressRep.delete(id);
-    res.status(200).send("deleted Address.");
-  } catch (err) {
-    return res.status(404).json("Address not found.");
-  }
-});
+);
 
-router.get("/", (req, res) => {
+router.get("/", (req: Request, res: Response) => {
   // #swagger.tags = ['Documentation']
-  // #swagger.description = 'Endpoint to redirect to ocumentation.'
+  // #swagger.description = 'Endpoint to redirect to documentation.'
   res.redirect("/doc");
 });
